fix: use proper red background for testimonials in dark mode

--- a/src/components/section-testimonials/style.module.scss
+++ b/src/components/section-testimonials/style.module.scss
@@ -24,7 +24,7 @@
 
   --affordance: var(--blue);
   &:nth-of-type(2n) {
-    --affordance: var(--red);
+    --affordance: #{$red};
   }
 
   &::after {
